# multiplayer_games_CMC2026

./: .pydocstyle  README.md  dodo.py  pyproject.toml
docs/: api.rst  conf.py  index.rst  overview.rst
src/: frontend.py  main_client.py  main_server.py  server.py
src/lib/: backend.py  frontend.py  localization.py  main_function_for_client.py  main_function_for_server.py  main_function_for_strver.py  menu.py  pong_frontend.py  quiz_frontend.py  server.py  snake_frontend.py  status_client_support.py  x_o_frontend.py
src/lib/locale/en/LC_MESSAGES/: messages.po
src/lib/locale/ru/LC_MESSAGES/: messages.po
tests/: test_localization.py  test_snake_logic.py
