[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multiplayer-games-cmc2026"
version = "0.1.0"
description = "Semester multiplayer games project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "arcade>=3.0.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "flake8>=7.0.0",
  "pydocstyle>=6.3.0",
]
docs = [
  "sphinx>=7.0.0",
]

[project.scripts]
main_client = "main_client:cli"
main_server = "main_server:cli"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["main_client", "main_server"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["lib*"]
