[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multiplayer-games-cmc2026"
version = "0.1.0"
description = "Semester multiplayer games project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "arcade>=3.0.0",
]

[project.optional-dependencies]
dev = [
  "babel>=2.15.0",
  "build>=1.2.2",
  "coverage>=7.0.0",
  "doit>=0.36.0",
  "flake8>=7.0.0",
  "pydocstyle>=6.3.0",
]
docs = [
  "sphinx>=7.0.0",
]

[project.scripts]
main_client = "main_client:cli"
main_server = "main_server:cli"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["main_client", "main_server"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["lib*"]

[tool.setuptools.package-data]
lib = ["locale/*/LC_MESSAGES/*.po", "locale/*/LC_MESSAGES/*.mo"]

[tool.coverage.run]
source = ["src/lib"]
omit = [
  "src/lib/backend.py",
  "src/lib/frontend.py",
  "src/lib/menu.py",
  "src/lib/*_frontend.py",
]

[tool.coverage.report]
show_missing = false
